--- a/contatos.html
+++ b/contatos.html
@@ -18,49 +18,15 @@
         </div>
 
         <ul>
-            <a href="index.html"><li>Início</li></a>
+            <a href="#inicio"><li>Início</li></a>
             <a href="servicos.html"><li>Serviços</li></a>
             <a href="sobre.html"><li>Sobre</li></a>
             <a href="contatos.html"><li>Contatos</li></a>
         </ul>
     </header>
 
-    <!--Pagina serviços do site-->
-    <h3>Serviços Prestados</h3>
-    <main class="artigos" id="servicos">
-        <article>
-            
-            <h3>Direito Civil</h3>
-            <img src="./components/images/civil.jpg" alt="civil">
-            <p>
-                Nossa especialidade se da na área de contratos , inventário, relações de consumo , atuamos na esfera administrativa e judicial, oferecendo ao cliente sempre a melhor opção para o caso concreto.
-            </p>
-        </article>
-
-        <article>
-            <h3>Direito Penal</h3>
-            <img src="./components/images/penal.jpg" alt="penal">
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis labore quam quo iure a alias odit officiis tenetur, autem vero numquam pariatur explicabo recusandae adipisci debitis dolor cum aperiam quasi.
-            </p>
-        </article>
-
-        <article>
-            
-            <h3>Direito Civil</h3>
-            <img src="./components/images/previdenciario.jpg" alt="previdenciario">
-            <p>
-                Nossa especialidade se da na área de contratos , inventário, relações de consumo , atuamos na esfera administrativa e judicial, oferecendo ao cliente sempre a melhor opção para o caso concreto.
-            </p>
-        </article>
-
-        <article>
-            <h3>Direito Penal</h3>
-            <img src="./components/images/trabalho.jpg" alt="trabalho">
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis labore quam quo iure a alias odit officiis tenetur, autem vero numquam pariatur explicabo recusandae adipisci debitis dolor cum aperiam quasi.
-            </p>
-        </article>
+    <main>
+        <h1>Contatos</h1>
     </main>
 
     <!--Rodapé da pegina-->
