--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
         </div>
 
         <ul>
-            <a href="#"><li>Início</li></a>
-            <a href="./servicos.html"><li>Serviços</li></a>
-            <a href="#"><li>Sobre</li></a>
-            <a href="#"><li>Contatos</li></a>
+            <a href="#inicio"><li>Início</li></a>
+            <a href="servicos.html"><li>Serviços</li></a>
+            <a href="sobre.html"><li>Sobre</li></a>
+            <a href="contatos.html"><li>Contatos</li></a>
         </ul>
     </header>
 
     <!--Parte principal do site-->
-    <main>
+    <main class="inicio" id="inicio">
         <aside>
             <!-- <h2><span>Inscreva-se agora</span></h2> -->
             <h2>Advocacia Especializada</h2>
@@ -46,6 +46,7 @@
         </article>
     </main>
 
+    <!--Rodapé da pegina-->
     <footer class="rodape">
 
         <ul class="informacoes">
