Criação das paginas serviços, sobre e contatos

--- a/contatos.html
+++ b/contatos.html
@@ -18,15 +18,26 @@
         </div>
 
         <ul>
-            <a href="#inicio"><li>Início</li></a>
+            <a href="inicio"><li>Início</li></a>
             <a href="servicos.html"><li>Serviços</li></a>
             <a href="sobre.html"><li>Sobre</li></a>
             <a href="contatos.html"><li>Contatos</li></a>
         </ul>
     </header>
 
-    <main>
-        <h1>Contatos</h1>
+    <!--Pagina Contatos-->
+    <h1 id="titulo-contatos">Contatos</h1>
+    <main class="contatos-info">
+        <ul class="contatos-lista">
+            <li>Telefone - 21 0000-00000</li>
+            <li>Email - escritorio@a.m.advogados@gmail.com</li>
+            <li>Rua - Rua Silvio Martinho 180, Centro de Nova Iguaçu - RJ - CEP: 00000-000</li>
+        </ul>
+        
+        <h3 class="titulo-mapa">Como Chegar</h3>
+        <div class="mapa">
+            <img src="./components/images/mapa.JPG" alt="mapa">
+        </div>
     </main>
 
     <!--Rodapé da pegina-->
