--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
 
         <ul>
-            <a href="#inicio"><li>Início</li></a>
+            <a href="inicio"><li>Início</li></a>
             <a href="servicos.html"><li>Serviços</li></a>
             <a href="sobre.html"><li>Sobre</li></a>
             <a href="contatos.html"><li>Contatos</li></a>
@@ -31,7 +31,9 @@
             <!-- <h2><span>Inscreva-se agora</span></h2> -->
             <h2>Advocacia Especializada</h2>
             <p>
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s
+                "Somos um escritório de advocacia dedicado a fornecer serviços jurídicos de alta qualidade e soluções eficazes para nossos clientes. Com uma equipe experiente e comprometida, estamos preparados para enfrentar uma ampla gama de desafios legais, sempre buscando proteger os interesses e direitos de nossos clientes. <br>
+                <br>
+                Nossa filosofia é baseada na excelência, ética profissional e atendimento personalizado. Acreditamos que cada caso é único e merece uma abordagem personalizada, adaptada às necessidades específicas de nossos clientes. Valorizamos a confiança e a transparência em nossas relações, trabalhando em estreita colaboração com nossos clientes para entender seus objetivos e encontrar as melhores soluções legais.
             </p>
 
             <!-- <form action="">
