--- a/servicos.html
+++ b/servicos.html
@@ -28,8 +28,8 @@
     <!--Pagina serviços do site-->
     <h3>Serviços Prestados</h3>
     <main class="artigos" id="servicos">
+
         <article>
-            
             <h3>Direito Civil</h3>
             <img src="./components/images/civil.jpg" alt="civil">
             <p>
@@ -46,8 +46,7 @@
         </article>
 
         <article>
-            
-            <h3>Direito Civil</h3>
+            <h3>Direito Previdenciario</h3>
             <img src="./components/images/previdenciario.jpg" alt="previdenciario">
             <p>
                 Nossa especialidade se da na área de contratos , inventário, relações de consumo , atuamos na esfera administrativa e judicial, oferecendo ao cliente sempre a melhor opção para o caso concreto.
@@ -55,7 +54,7 @@
         </article>
 
         <article>
-            <h3>Direito Penal</h3>
+            <h3>Direito Do Trabalho</h3>
             <img src="./components/images/trabalho.jpg" alt="trabalho">
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis labore quam quo iure a alias odit officiis tenetur, autem vero numquam pariatur explicabo recusandae adipisci debitis dolor cum aperiam quasi.
