--- a/sobre.html
+++ b/sobre.html
@@ -14,7 +14,6 @@
     <header>
         <div id="title">
             <h1>Antonieto & Motta - Advogados</h1>
-            
         </div>
 
         <ul>
@@ -25,9 +24,23 @@
         </ul>
     </header>
 
-    <main>
-        <h1>Sobre</h1>
+    <!-- Pagina Sobre-->
+    <h1 id="titulo-sobre">Sobre</h1>
+    <main class="sobre">
+
+        <article id="artigo-sobre">
+            <p>"Somos um escritório de advocacia dedicado a fornecer serviços jurídicos de alta qualidade e soluções eficazes para nossos clientes. Com uma equipe experiente e comprometida, estamos preparados para enfrentar uma ampla gama de desafios legais, sempre buscando proteger os interesses e direitos de nossos clientes. <br>
+            <br>
+            Nossa filosofia é baseada na excelência, ética profissional e atendimento personalizado. Acreditamos que cada caso é único e merece uma abordagem personalizada, adaptada às necessidades específicas de nossos clientes. Valorizamos a confiança e a transparência em nossas relações, trabalhando em estreita colaboração com nossos clientes para entender seus objetivos e encontrar as melhores soluções legais. <br>
+            <br>
+            Com experiência em diversas áreas do direito, oferecemos serviços abrangentes que abarcam desde consultoria jurídica preventiva até representação em litígios complexos. Nossos advogados são especializados em diversas áreas, como direito civil, direito empresarial, direito trabalhista, direito tributário e muito mais. Estamos empenhados em atualizar constantemente nosso conhecimento e habilidades para fornecer um serviço jurídico de excelência. <br>
+            <br>
+            Se você precisa de um escritório de advocacia confiável e comprometido em proteger seus interesses legais, estamos prontos para ajudar. Entre em contato conosco para uma consulta inicial e descubra como podemos auxiliar na resolução de suas questões jurídicas de forma eficaz e assertiva."
+            </p>
+        </article>
+
     </main>
+
     <!--Rodapé da pegina-->
     <footer class="rodape">
 
