--- a/contatos.html
+++ b/contatos.html
@@ -18,7 +18,7 @@
         </div>
 
         <ul>
-            <a href="inicio"><li>Início</li></a>
+            <a href="index.html"><li>Início</li></a>
             <a href="servicos.html"><li>Serviços</li></a>
             <a href="sobre.html"><li>Sobre</li></a>
             <a href="contatos.html"><li>Contatos</li></a>
