reestruturação da pag. principal, arquivo index

--- a/sobre.html
+++ b/sobre.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Antonieto & Motta - Advogados</title>
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/sobre.css">
     <link rel="stylesheet" href="./styles/fonts.css">
     <link rel="stylesheet" href="./styles/media.css">
 </head>
@@ -38,6 +38,8 @@
             Se você precisa de um escritório de advocacia confiável e comprometido em proteger seus interesses legais, estamos prontos para ajudar. Entre em contato conosco para uma consulta inicial e descubra como podemos auxiliar na resolução de suas questões jurídicas de forma eficaz e assertiva."
             </p>
         </article>
+
+        <img id="img-sobre" src="./components/images/patrick.png" alt="patrick">
 
     </main>
 
