alteração layout cabeçalho e background da pagina

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body>
     <section class="redes_sociais">
             <span id="imagens">
-                <a href="#"><img id="facebook" src="./components/icon/facebook.png" alt="facebook"></a>
-                <a href="#"><img id="instagram" src="./components/icon/Instagram.png" alt="instagram"></a>
+                <a href="https://www.facebook.com/patrickalvesmotta"><img id="facebook" src="./components/icon/facebook.png" alt="facebook"></a>
+                <a href="https://www.instagram.com/patrickalvezmotta/"><img id="instagram" src="./components/icon/Instagram.png" alt="instagram"></a>
             </span>
     </section>
     
@@ -25,7 +25,7 @@
         <header class="logo">
             <span id="logo">
                 <h1>Antonieto & Motta</h1>
-                <h3>Advogados</h3>
+                <h3>Advogados Associados</h3>
             </span>
         </header>
         <main class="menu_principal">
