alteração do layout parte principal da pag, arquivo index

--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
 
         <article class="caixa1_artigo">
                 <header class="titulos">
-                    <h2 id="titulo_caixa1">Advocacia</h2>
-                    <h2 id="titulo_caixa1">Especializada</h2>
+                    <h2 id="titulo1_caixa1">Advocacia</h2>
+                    <h2 id="titulo2_caixa1">Especializada</h2>
                 </header>
                 
                 <p id="paragrafo1">
-                    "Somos um escritório de advocacia atuando em diversas areas do direito dedicados a fornecer serviços jurídicos de alta qualidade e soluções eficazes para nossos clientes. Com uma equipe experiente e comprometida, estamos preparados para enfrentar uma ampla gama de desafios legais, sempre buscando proteger os interesses e direitos de nossos clientes.
+                    Somos um escritório de advocacia atuando em diversas areas do direito dedicados a fornecer serviços jurídicos de alta qualidade e soluções eficazes para nossos clientes. Com uma equipe experiente e comprometida, estamos preparados para enfrentar uma ampla gama de desafios legais, sempre buscando proteger os interesses e direitos de nossos clientes.
                 </p>
                 
                 <p id="paragrafo2">
