layout rodape da pag. principal, arquivo index

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
         <ul class="informacoes">
             <li id="endereco">Endereço
-                <div> Rua Silvio Martinho 180, Centro de Nova Iguaçu - RJ - CEP: 00000-000</div></li>
+                <div> Rua endereço nº 0000, Centro - RJ - CEP: 00000-000</div></li>
 
             <li id="contatos">Contatos
                 <div>Telefone: 21 0000-00000</div>
